// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a Switch with defaultValue false 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  accessibilityState={
    {
      "checked": false,
      "disabled": false,
    }
  }
  collapsable={false}
  disabled={false}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  onChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="hsl(107, 58%, 33%)"
  style={
    [
      {
        "height": 31,
        "width": 51,
      },
      {
        "backgroundColor": "hsl(53, 21%, 93%)",
        "borderRadius": 16,
      },
    ]
  }
  tintColor="hsl(53, 21%, 93%)"
  value={false}
/>
`;

exports[`renders a Switch with defaultValue true 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  accessibilityState={
    {
      "checked": true,
      "disabled": false,
    }
  }
  collapsable={false}
  disabled={false}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  onChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="hsl(107, 58%, 33%)"
  style={
    [
      {
        "height": 31,
        "width": 51,
      },
      {
        "backgroundColor": "hsl(53, 21%, 93%)",
        "borderRadius": 16,
      },
    ]
  }
  tintColor="hsl(53, 21%, 93%)"
  value={true}
/>
`;

exports[`renders a Switch with value false 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  accessibilityState={
    {
      "checked": false,
      "disabled": false,
    }
  }
  collapsable={false}
  disabled={false}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  onChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="hsl(107, 58%, 33%)"
  style={
    [
      {
        "height": 31,
        "width": 51,
      },
      {
        "backgroundColor": "hsl(53, 21%, 93%)",
        "borderRadius": 16,
      },
    ]
  }
  tintColor="hsl(53, 21%, 93%)"
  value={false}
/>
`;

exports[`renders a Switch with value true 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  accessibilityState={
    {
      "checked": true,
      "disabled": false,
    }
  }
  collapsable={false}
  disabled={false}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  onChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="hsl(107, 58%, 33%)"
  style={
    [
      {
        "height": 31,
        "width": 51,
      },
      {
        "backgroundColor": "hsl(53, 21%, 93%)",
        "borderRadius": 16,
      },
    ]
  }
  tintColor="hsl(53, 21%, 93%)"
  value={true}
/>
`;

exports[`renders a disabled Switch with value false 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  accessibilityState={
    {
      "checked": false,
      "disabled": true,
    }
  }
  collapsable={false}
  disabled={true}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  onChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="hsl(107, 58%, 33%)"
  style={
    [
      {
        "height": 31,
        "width": 51,
      },
      {
        "backgroundColor": "hsl(53, 21%, 93%)",
        "borderRadius": 16,
      },
    ]
  }
  tintColor="hsl(53, 21%, 93%)"
  value={false}
/>
`;

exports[`renders a disabled Switch with value true 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  accessibilityState={
    {
      "checked": true,
      "disabled": true,
    }
  }
  collapsable={false}
  disabled={true}
  handlerTag={-1}
  handlerType="NativeViewGestureHandler"
  onChange={[Function]}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="hsl(107, 58%, 33%)"
  style={
    [
      {
        "height": 31,
        "width": 51,
      },
      {
        "backgroundColor": "hsl(53, 21%, 93%)",
        "borderRadius": 16,
      },
    ]
  }
  tintColor="hsl(53, 21%, 93%)"
  value={true}
/>
`;
